[package]
name = "nvtt_rs"
version = "0.10.0"
edition = "2021"
authors = [ "Luka Mijalkovic <luka.mijalkovic3@gmail.com>" ]
description = "A rust wrapper around the Nvidia Texture Tools library."
repository = "https://github.com/mijalk0/nvtt"
license = "MIT"
readme = "README.md"
keywords = [ "image_processing", "texture", "texture_compression", "nvidia", "nvtt" ]
rust-version = "1.66"

[dependencies]
nvtt-sys = { version = "0.5.0", path = "../nvtt_sys" }
cfg-if = "1"
thiserror = "1"
lazy_static = "1.4"
libc = "0.2"
tempfile = "3"

[dev-dependencies]
approx = "0.5"

[features]
cuda = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
